[gd_scene load_steps=7 format=3 uid="uid://byjf4d5kfhwy"]

[ext_resource type="FontVariation" uid="uid://ccdyv65ubusey" path="res://fonts/default_font_black.tres" id="1"]
[ext_resource type="StyleBox" uid="uid://s4015jqriuh3" path="res://styles/PanelStyleTransparent.tres" id="2"]
[ext_resource type="PackedScene" uid="uid://cf2jxkpomwvf3" path="res://rythm_game/rhythm_game_controller.tscn" id="3"]
[ext_resource type="Script" uid="uid://bcns61o420ql0" path="res://rythm_game/rhythm_game_multiplayer.gd" id="4"]
[ext_resource type="Script" uid="uid://1186uqvv6tv4" path="res://rythm_game/MultiplayerScoreboard.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://ddhhinndecvh7" path="res://multiplayer/lobby/MultiplayerLoadingMemberList.tscn" id="6_rk01l"]

[node name="RhythmGameMultiplayer" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4")

[node name="RhythmGame" parent="." instance=ExtResource("3")]
layout_mode = 1

[node name="Node2D" type="Node2D" parent="."]
z_index = -1

[node name="MultiplayerScoreboardContainer" type="HBoxContainer" parent="Node2D"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1744.0
offset_bottom = 1064.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="MultiplayerScoreboard" type="VBoxContainer" parent="Node2D/MultiplayerScoreboardContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
alignment = 1
script = ExtResource("5")

[node name="MPLoadingPanel" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="MPLoadingPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="MPLoadingPanel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "Waiting for other players to load!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MPLoadingPanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="MultiplayerLoadingMemberList" parent="MPLoadingPanel/VBoxContainer/HBoxContainer" instance=ExtResource("6_rk01l")]
unique_name_in_owner = true
layout_mode = 2
